# mcp-nu-rs-template

./: Cargo.toml  README.md  justfile
src/: main.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs  types.rs  utilities.rs
src/mcp/templates/: prompts.json  tools.json
