[package]
name = "mcp-rs-template"
version = "0.1.0"
edition = "2021"
authors = ["your name <your-name@example.com>"]
description = "Model Context Protocol (MCP) Rust CLI server template"
keywords = ["rust", "ai", "mcp", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
url = { version = "2.5", features = ["serde"] }
rpc-router = "0.1.3"
maplit = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.38"
signal-hook = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
